[gd_scene load_steps=17 format=2]

[ext_resource path="res://styles/GreenOutlineStylebox.tres" type="StyleBox" id=1]
[ext_resource path="res://styles/BlueOutlineStylebox.tres" type="StyleBox" id=2]
[ext_resource path="res://styles/LightGreenOutlineStylebox.tres" type="StyleBox" id=3]
[ext_resource path="res://styles/YellowOutlineStylebox.tres" type="StyleBox" id=4]
[ext_resource path="res://styles/GreyStylebox.tres" type="StyleBox" id=5]
[ext_resource path="res://modular/Footer.tscn" type="PackedScene" id=6]
[ext_resource path="res://modular/CategoryCount.tscn" type="PackedScene" id=7]
[ext_resource path="res://modular/IrisButtonContainer.tscn" type="PackedScene" id=8]
[ext_resource path="res://modular/Header.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/ui/fonts/roboto/Roboto_Condensed_Regular_4B.tres" type="DynamicFont" id=10]
[ext_resource path="res://exercises/tutorial/tutorial_1.gd" type="Script" id=11]
[ext_resource path="res://assets/images/optalert-graphic.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/logos/optalert-logo.png" type="Texture" id=13]
[ext_resource path="res://exercises/tutorial/tutorial_2.tscn" type="PackedScene" id=14]
[ext_resource path="res://game/components/overlay/overlay.tscn" type="PackedScene" id=16]

[sub_resource type="StyleBoxFlat" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 11 )

[node name="Tutorial_1" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Pages" type="TabContainer" parent="Tutorial_1"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
tabs_visible = false

[node name="Tutorial_1" type="Control" parent="Tutorial_1/Pages"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Tutorial_1/Pages/Tutorial_1"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.862745, 0.862745, 0.862745, 1 )

[node name="Control" type="Control" parent="Tutorial_1/Pages/Tutorial_1"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial_1/Pages/Tutorial_1/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer" instance=ExtResource( 9 )]
margin_bottom = 21.0

[node name="HBoxContainer" type="HBoxContainer" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer"]
margin_top = 25.0
margin_right = 1024.0
margin_bottom = 536.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Control" type="HBoxContainer" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer"]
margin_right = 389.0
margin_bottom = 511.0
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control"]
margin_right = 10.0
margin_bottom = 511.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control"]
margin_left = 14.0
margin_right = 264.0
margin_bottom = 511.0

[node name="MarginContainer" type="MarginContainer" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer"]
margin_right = 250.0
margin_bottom = 130.0
custom_constants/margin_left = 31

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer/MarginContainer"]
margin_left = 31.0
margin_right = 250.0
margin_bottom = 130.0

[node name="TextureRect" type="TextureRect" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 219.0
margin_bottom = 60.0
rect_min_size = Vector2( 180, 60 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="SiteLabel" type="Label" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 64.0
margin_right = 219.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.454902, 0.454902, 0.458824, 1 )
custom_fonts/font = ExtResource( 10 )
text = "MÃºltiples Sitios"

[node name="RichTextLabel" type="RichTextLabel" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 219.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/bold_font = ExtResource( 10 )
custom_fonts/normal_font = ExtResource( 10 )
bbcode_enabled = true
bbcode_text = "[color=#cf5926]IRIS[/color] [color=#003368]Sistema indicador de Riesgo Individual[/color] "
text = "IRIS Sistema indicador de Riesgo Individual "
scroll_active = false

[node name="ActivityGraphContainer" type="CenterContainer" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer"]
margin_top = 134.0
margin_right = 250.0
margin_bottom = 344.0
rect_min_size = Vector2( 250, 210 )

[node name="ActivityGraph" type="TextureRect" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer/ActivityGraphContainer"]
unique_name_in_owner = true
visible = false
margin_right = 250.0
margin_bottom = 210.0
rect_min_size = Vector2( 250, 210 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="CategoryContainer" type="VBoxContainer" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer"]
margin_top = 348.0
margin_right = 250.0
margin_bottom = 500.0

[node name="HighRiskCategory" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer/CategoryContainer" instance=ExtResource( 7 )]
unique_name_in_owner = true

[node name="MedRiskCategory" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer/CategoryContainer" instance=ExtResource( 7 )]
unique_name_in_owner = true
margin_top = 26.0
margin_bottom = 48.0
custom_styles/panel = ExtResource( 4 )
category_name = "MEDIO RIESGO"

[node name="LowRiskCategory" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer/CategoryContainer" instance=ExtResource( 7 )]
unique_name_in_owner = true
margin_top = 52.0
margin_bottom = 74.0
custom_styles/panel = ExtResource( 1 )
category_name = "BAJO RIESGO"

[node name="DisconectedCategory" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer/CategoryContainer" instance=ExtResource( 7 )]
unique_name_in_owner = true
margin_top = 78.0
margin_bottom = 100.0
custom_styles/panel = ExtResource( 5 )
category_name = "NO CONECTADO"

[node name="NoGlassesCategory" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer/CategoryContainer" instance=ExtResource( 7 )]
unique_name_in_owner = true
margin_top = 104.0
margin_bottom = 126.0
custom_styles/panel = ExtResource( 3 )
category_name = "LENTES OFF"

[node name="SelfManagementCategory" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control/VBoxContainer/CategoryContainer" instance=ExtResource( 7 )]
unique_name_in_owner = true
margin_top = 130.0
margin_bottom = 152.0
custom_styles/panel = ExtResource( 2 )
category_name = "DE AUTOGESTION"

[node name="Control" type="Control" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/Control"]
margin_left = 268.0
margin_right = 389.0
margin_bottom = 511.0
size_flags_horizontal = 3

[node name="IrisButtonContainer" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer" instance=ExtResource( 8 )]
unique_name_in_owner = true
margin_left = 389.0
margin_right = 1024.0
margin_bottom = 511.0

[node name="Footer" parent="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer" instance=ExtResource( 6 )]

[node name="Tutorial2" parent="Tutorial_1/Pages" instance=ExtResource( 14 )]
unique_name_in_owner = true
visible = false

[node name="Tutorial_4_Pivot" type="Control" parent="Tutorial_1"]
unique_name_in_owner = true
margin_left = 49.0
margin_top = 11.0
margin_right = 89.0
margin_bottom = 51.0
mouse_filter = 2

[node name="Tutorial_3_Pivot" type="Control" parent="Tutorial_1"]
unique_name_in_owner = true
margin_left = 78.0
margin_top = 41.0
margin_right = 118.0
margin_bottom = 81.0
mouse_filter = 2

[node name="Tutorial_4_Container" type="Control" parent="Tutorial_1"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Tutorial_3_Container" type="Control" parent="Tutorial_1"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TutorialCanvas" type="CanvasLayer" parent="."]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Overlay" parent="CanvasLayer2" instance=ExtResource( 16 )]

[node name="Logo" parent="CanvasLayer2/Overlay" index="0"]
visible = false

[connection signal="risk_summary_pressed" from="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/Header" to="." method="_on_Header_risk_summary_pressed"]
[connection signal="before_more_info_pressed" from="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/IrisButtonContainer" to="." method="_on_IrisButtonContainer_before_more_info_pressed"]
[connection signal="more_info_pressed" from="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/IrisButtonContainer" to="." method="_on_IrisButtonContainer_more_info_pressed"]
[connection signal="risk_tag_pressed" from="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/IrisButtonContainer" to="." method="_on_IrisButtonContainer_risk_tag_pressed"]
[connection signal="select_iris_button" from="Tutorial_1/Pages/Tutorial_1/Control/VBoxContainer/HBoxContainer/IrisButtonContainer" to="." method="_on_IrisButtonContainer_select_iris_button"]
[connection signal="back_pressed" from="Tutorial_1/Pages/Tutorial2" to="." method="_on_Tutorial2_back_pressed"]

[editable path="CanvasLayer2/Overlay"]
